--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex-1">
-              <img class="" src="/images/slider/bike1.png" class="w-full" />
+              <img class="" src="images/slider/bike1.png" class="w-full" />
             </div>
           </div>
           <div
@@ -126,7 +126,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex-1">
-              <img class="" src="/images/slider/bike2.png" class="w-full" />
+              <img class="" src="images/slider/bike2.png" class="w-full" />
             </div>
           </div>
           <div
@@ -151,7 +151,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex-1">
-              <img class="" src="/images/slider/bike3.png" class="w-full" />
+              <img class="" src="images/slider/bike3.png" class="w-full" />
             </div>
           </div>
           <div
@@ -176,7 +176,7 @@
               <button class="btn bg-bike-primary text-white">Purchase</button>
             </div>
             <div class="flex-1">
-              <img class="" src="/images/slider/bike4.png" class="w-full" />
+              <img class="" src="images/slider/bike4.png" class="w-full" />
             </div>
           </div>
           <div
@@ -197,7 +197,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
           <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img src="/images/others/latest1.png" alt="Shoes" />
+              <img src="images/others/latest1.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl font-semibold">
@@ -214,7 +214,7 @@
           </div>
           <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img src="/images/others/latest2.png" alt="Shoes" />
+              <img src="images/others/latest2.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl font-semibold">
@@ -231,7 +231,7 @@
           </div>
           <div class="card bg-base-100 shadow-xl">
             <figure>
-              <img src="/images/others/latest3.png" alt="Shoes" />
+              <img src="images/others/latest3.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl font-semibold">
@@ -248,7 +248,238 @@
           </div>
         </div>
       </section>
+      <!-- Happy Clients Section -->
+      <section>
+        <h1 class="text-5xl font-semibold text-center my-24">
+          Happy <span class="text-bike-primary">Clients says</span>
+        </h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11">
+          <div class="card bg-base-100 shadow-xl p-9 space-y-4 mb-24">
+            <figure>
+              <img class="w-32" src="images/others/user-1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <h6 class="text-info text-center font-semibold">Regina Miles</h6>
+              <p class="text-center font-semibold">Banker</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl p-9 space-y-4 mb-24">
+            <figure>
+              <img class="w-32" src="images/others/user-2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <h6 class="text-info text-center font-semibold">Regina Miles</h6>
+              <p class="text-center font-semibold">Banker</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 shadow-xl p-9 space-y-4 mb-24">
+            <figure>
+              <img class="w-32" src="images/others/user-3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <h6 class="text-info text-center font-semibold">Regina Miles</h6>
+              <p class="text-center font-semibold">Banker</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- FAQ Section -->
+
+      <section>
+        <h1 class="text-5xl font-semibold text-center my-24">
+          Frequently <span class="text-bike-primary">Asked Questions</span>
+        </h1>
+
+        <div class="hero mb-24">
+          <div class="hero-content flex-col lg:flex-row gap-4 lg:gap-24">
+            <img
+              src="/images/others/faq.png"
+              class="max-w-sm rounded-lg shadow-2xl w-3/4"
+            />
+            <div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should know about riding
+                  a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  How can I tell if my helmet is old and I need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  What rules should I follow when riding my bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer
+      class="footer p-10 bg-[#0B0D17] text-neutral-content flex justify-between px-44"
+    >
+      <div>
+        <ul class="menu menu-horizontal">
+          <li><a>Download Now</a></li>
+          <li><a>License</a></li>
+        </ul>
+        <ul class="menu menu-horizontal">
+          <li><a>About</a></li>
+          <li><a>Features</a></li>
+          <li><a>Pricing</a></li>
+          <li><a>Careers</a></li>
+          <li><a>Help</a></li>
+          <li><a>Privacy Policy</a></li>
+        </ul>
+        <p class="ml-6">© 2020 bike. All rights reserved</p>
+      </div>
+      <div>
+        <span class="footer-title">Get the App</span>
+        <div class="grid grid-cols-1 gap-4 w-40">
+          <a><img src="images/others/android.png" alt="" /></a>
+          <a><img src="images/others/ios.png" alt="" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
